register -u arg